--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         <div class="grid">
             <p class="copyright">copyright 2020 Cosmo</p>
             <ul class="social">
-                <li> <a href="" ><img src="/assets/icon_fb.svg" alt="fb"></a> </li>
-                <li> <a href=""><img src="/assets/icon_tw.svg" alt="twitter"></a></li>
+                <li> <a href="" ><img src="/assets/icon/icon_fb.svg" alt="fb"></a> </li>
+                <li> <a href=""><img src="/assets/icon/icon_tw.svg" alt="twitter"></a></li>
             </ul>
         </div>
     </footer>
